# multi_sim_agent

./: LICENSE  README.md  docker-compose.yaml  langgraph.json  pyproject.toml
backend/: Dockerfile  logger.py  run_agent.py  run_client.py  run_orchestrator_demo.py  run_service.py  settings.py
backend/agents/: __init__.py  agent_manager.py  asta_mcp_client.py  client.py  llm.py  tools.py
backend/agents/dft_tools/: __init__.py  convergence_tools.py  database_tools.py  pymatgen_tools.py  qe_tools.py  slurm_tools.py  structure_tools.py
backend/api/: dependencies.py  main.py  utils.py
backend/api/endpoints/: agent.py
backend/core/: __init__.py  exceptions.py  models.py  schema.py
backend/utils/: date.py  fileio.py  string.py  url.py  workspace.py
backend/web_browser/: base.py
frontend/: Dockerfile  app.py  requirements.txt  streamlit_app.py
scripts/: install.sh  run.sh  stop.sh
